<resources>
    <string name="app_name">LabExam4</string>
    <string name="add_note">Add Note</string>
    <string name="enter_the_title">Enter the Title</string>
    <string name="enter_the_description">Enter the description</string>
    <string name="notes">Notes</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="add_new_note">Add new note</string>
    <string name="edit_note">Edit Note</string>
    <string name="memora">Memora</string>
    <string name="bullets">bullets</string>
    <string name="table">table</string>
    <string name="underline">underline</string>
    <string name="italic">italic</string>
    <string name="bold">bold</string>
    <string name="redo">redo</string>
    <string name="undo">undo</string>
    <string name="update_note">Update Note</string>
</resources>